01052024 исправлены замечания